schema/testdata/validation_permission_attribute_expression_forbidden_operator/schema.keel
model Profile {
    fields {
        username Text
    }

    @permission(
        expression: profile.username = something,
        actions: [get]
    )
}
